# DynamicLibraryCpp

./: CMakeLists.txt  README.md  main.cpp
mylib/: CMakeLists.txt
mylib/include/: example.h
mylib/src/: example.cpp
